tests/paczka1/small_fuzzy/77515133.err
Error in line 2: wmkvsWI S502 16,2
Error in line 9: mb6HQoZ5QR S337 -1,6
Error in line 6: mb6HQoZ5QR S337 8,7
